--- a/style.scss
+++ b/style.scss
@@ -59,7 +59,7 @@ table {
     justify-content: center;
     align-items: center;
     text-align: center;
-    
+
 }
 
 .hero h1 {
@@ -79,11 +79,11 @@ footer {
     text-align: center;
 }
 nav img{
-    height: 80px;
+    height: 100px;
 }
 
 
-.btn {
+#btn {
     background-color: rgb(10, 10, 10);
     color: white;
 }
@@ -96,8 +96,9 @@ nav img{
 
 }
 #projects {
-    background-color: #070707;
-    color:rgb(247, 245, 245);
+    background-color: #fff;
+    color:rgb(15, 15, 15);
+    padding: 100px 0;
 }
 #contact{
     background-color: #070707;
